--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'Nombres de Doramas'
+title: 'Name of doramas"
 
 # The slogan describes your website and is used on homepage in <title> and other important places
 slogan: 'A Flexible Theme for Jekyll'
