--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'Doramas'
+title: 'Drama name'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
 slogan: 'Aquí encontrarás lo mejor de los dramas'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'Doramaname es una página dedicada a recopilar información de los mejores doramas'
+description: 'Drama name es una página dedicada a recopilar información de los mejores doramas'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
 credits: '<p>Created with &hearts; by <a href="http://phlow.de/">Phlow</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
