--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://github.com/ItandehuiBelenLopezMukul/ItandehuiBelenLopezMukul.github.io/tree/gh-pages/images'
+urlimg: 'https://github.com/ItandehuiBelenLopezMukul.github.io/images/'
 
 
 # Logo size is 600x80 pixels
